worksheet: Fix gwt-DialogBox z-index to be on top of toolbox

--- a/website/src/com/project/website/canvas/client/resources/main.css
+++ b/website/src/com/project/website/canvas/client/resources/main.css
@@ -55,10 +55,11 @@
 }
 
 .gwt-PopupPanelGlass {
-	z-index: gwtPopUpPanelGlassZIndex;
+	z-index: gwtPopUpPanelGlassZIndex !important;
 }
 .gwt-DialogBox {
-	z-index: dialogZIndex;
+	z-index: dialogZIndex !important;
+	max-width: 95%;
 }
 
 .textSelectionDisabled {
